fix card not showing the image

--- a/client/src/pages/Catalog/Catalog.scss
+++ b/client/src/pages/Catalog/Catalog.scss
@@ -12,6 +12,7 @@
 
   .card-container {
     display: grid;
+    margin-bottom: 20px;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto;
     gap: 25px;
